// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton Box skeleton loaded 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  font-size: 18px;
  line-height: 24px;
}

.c2 {
  font-size: 50px;
  line-height: 56px;
  max-width: 1200px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c4 {
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c5:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c5:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus > circle,
.c5:focus > ellipse,
.c5:focus > line,
.c5:focus > path,
.c5:focus > polygon,
.c5:focus > polyline,
.c5:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus::-moz-focus-inner {
  border: 0;
}

.c5:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) > circle,
.c5:focus:not(:focus-visible) > ellipse,
.c5:focus:not(:focus-visible) > line,
.c5:focus:not(:focus-visible) > path,
.c5:focus:not(:focus-visible) > polygon,
.c5:focus:not(:focus-visible) > polyline,
.c5:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width:768px) {
  .c2 {
    font-size: 34px;
    line-height: 40px;
    max-width: 816px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <h1
        class="c2"
      >
        Heading
      </h1>
      <span
        class="c3"
      >
        Text
      </span>
      <p
        class="c4"
      >
        Paragraph
      </p>
      <button
        class="c5"
        type="button"
      >
        Button
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Skeleton Box skeleton loading 1`] = `
<DocumentFragment>
  .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  background-color: #EDEDED;
  color: #444444;
  height: 56px;
  max-width: 200px;
  min-width: 150px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  margin-top: 6px;
  margin-bottom: 6px;
  background-color: #EDEDED;
  color: #444444;
  height: 18px;
  min-width: 100px;
  width: 100px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  background-color: #EDEDED;
  color: #444444;
  height: 18px;
  width: 100%;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  background-color: #EDEDED;
  color: #444444;
  height: 18px;
  width: 30%;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  background-color: #EDEDED;
  color: #444444;
  height: 24px;
  min-width: 100px;
  padding-left: 22px;
  padding-right: 22px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background: background;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 432px;
}

.c7 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  height: 6px;
}

.c2 {
  font-size: 50px;
  line-height: 56px;
  max-width: 1200px;
  font-weight: 600;
  overflow-wrap: break-word;
}

@media only screen and (max-width:768px) {
  .c7 {
    height: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    font-size: 34px;
    line-height: 40px;
    max-width: 816px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <h1
        class="c2"
      >
        <div
          class="c3"
        />
      </h1>
      <div
        class="c4"
      />
      <div
        class="c5"
      >
        <div
          class="c6"
        />
        <div
          class="c7"
        />
        <div
          class="c6"
        />
        <div
          class="c7"
        />
        <div
          class="c8"
        />
      </div>
      <div
        class="c9"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Skeleton Box skeleton sizes loading 1`] = `
<DocumentFragment>
  .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  background-color: #EDEDED;
  color: #444444;
  height: 32px;
  max-width: 200px;
  min-width: 150px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  margin-top: 6px;
  margin-bottom: 6px;
  background-color: #EDEDED;
  color: #444444;
  height: 12px;
  min-width: 100px;
  width: 100px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  background-color: #EDEDED;
  color: #444444;
  height: 22px;
  width: 100%;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  background-color: #EDEDED;
  color: #444444;
  height: 22px;
  width: 30%;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  background-color: #EDEDED;
  color: #444444;
  height: 28px;
  min-width: 100px;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background: background;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 528px;
}

.c7 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  height: 6px;
}

.c2 {
  font-size: 26px;
  line-height: 32px;
  max-width: 624px;
  font-weight: 600;
  overflow-wrap: break-word;
}

@media only screen and (max-width:768px) {
  .c7 {
    height: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    font-size: 22px;
    line-height: 28px;
    max-width: 528px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <h2
        class="c2"
      >
        <div
          class="c3"
        />
      </h2>
      <div
        class="c4"
      />
      <div
        class="c5"
      >
        <div
          class="c6"
        />
        <div
          class="c7"
        />
        <div
          class="c6"
        />
        <div
          class="c7"
        />
        <div
          class="c8"
        />
      </div>
      <div
        class="c9"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Skeleton Box skeleton with specific dimensions 1`] = `
<DocumentFragment>
  .c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  margin-top: 6px;
  margin-bottom: 6px;
  background-color: #EDEDED;
  color: #444444;
  height: 18px;
  min-width: 100px;
  width: 100px;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background: background;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 192px;
  width: 384px;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Skeleton Skeleton with theme 1`] = `
<DocumentFragment>
  .c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  margin-top: 6px;
  margin-bottom: 6px;
  background-color: #EDEDED;
  color: #444444;
  height: 18px;
  min-width: 100px;
  width: 100px;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #a2a8a8;
  color: #444444;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 6px;
}

@media only screen and (max-width:768px) {
  .c1 {
    border-radius: 3px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Skeleton renders 1`] = `
<DocumentFragment>
  .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  background-color: #EDEDED;
  color: #444444;
  height: 24px;
  width: 100%;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
    class="c0"
  >
    <div
      class="c1"
    />
  </div>
</DocumentFragment>
`;

exports[`Skeleton with styling props 1`] = `
<DocumentFragment>
  .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  margin: 12px;
  background: orange;
  height: 192px;
  width: 100%;
  border-radius: 12px;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width:768px) {
  .c1 {
    border-radius: 6px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    />
  </div>
</DocumentFragment>
`;
